# Circuit-Simulator

./: Amperometer.h  CCCS.h  CCVS.h  CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitObserver.h  CircuitScene.cpp  CircuitScene.h  CircuitWidget.cpp  CircuitWidget.h  Component.cpp  Component.h  ComponentObserver.h  CurrentSource.cpp  CurrentSource.h  EigenInterface.cpp  EigenInterface.h  IMatrix.cpp  IMatrix.h  MainWindow.cpp  MainWindow.h  MatrixException.h  ModelException.h  MyMatrix.cpp  MyMatrix.h  Node.cpp  Node.h  NodeObserver.cpp  NodeObserver.h  Observer.h  README.md  Resistor.cpp  Resistor.h  ResourceManager.cpp  ResourceManager.h  SparseMatrix.cpp  SparseMatrix.h  TestCircuitWidget.cpp  TestCircuitWidget.h  (+10 more)
QTest/: CMakeLists.txt  RunAllTest.cpp  TestCircuitWidget.cpp  TestCircuitWidget.h
sources/: ActiveComponent.cpp  ActiveComponent.h  Amperometer.cpp  Amperometer.h  CCCS.cpp  CCCS.h  CCVS.cpp  CCVS.h  CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitObserver.h  CircuitSamples.cpp  CircuitScene.cpp  CircuitScene.h  Component.cpp  Component.h  ComponentData.h  ComponentObserver.h  CurrentSource.cpp  CurrentSource.h  EigenInterface.cpp  EigenInterface.h  FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h  MatrixException.h  ModelException.h  Node.cpp  Node.h  NodeObserver.h  Resistor.cpp  Resistor.h  ResourceManager.cpp  ResourceManager.h  SparseMatrix.cpp  SparseMatrix.h  VCCS.cpp  VCCS.h  (+10 more)
test/: CMakeLists.txt  TestCircuitWidget.cpp
